deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kube-app
  template:
    metadata:
      labels:
        app: kube-app
    spec:
      containers:
        - name: kube-app
          image: kube-app:1.0
          ports:
            - containerPort: 3000
