service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-app-service
spec:
  type: ClusterIP
  selector:
    app: kube-app
  ports:
    - port: 3000
      targetPort: 3000
